--- a/public/index.html
+++ b/public/index.html
@@ -1,110 +1,118 @@
 <!DOCTYPE html>
 <html lang="nl">
-<head>
-  <meta charset="UTF-8" />
-  <title>Verduurzamen Voice Chat</title>
-  <style>
-    body { font-family: sans-serif; background: #f6f8fa; text-align: center; padding: 2em; }
-    h1 { color: #007b5f; }
-    button { margin: 1em; padding: 0.7em 1.2em; font-size: 1.1em; border: none; border-radius: .4em; cursor: pointer; }
-    #start { background-color: #007b5f; color: #fff; }
-    #stop { background-color: #b33; color: #fff; }
-    #status { margin-top: 1em; font-weight: bold; color: #444; }
-  </style>
-</head>
-<body>
-  <h1>🎙️ Verduurzamen Voice Assistant</h1>
-  <p>Druk op “Start Talking”, spreek Nederlands en de assistent praat terug!</p>
-  <button id="start">Start Talking</button>
-  <button id="stop">Stop</button>
-  <div id="status">Status: <span id="indicator">Idle</span></div>
-  <audio id="assistantAudio" autoplay></audio>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Verduurzamen Voice Chat</title>
+    <style>
+      body {
+        font-family: system-ui, sans-serif;
+        text-align: center;
+        background: #f7f8fa;
+        color: #222;
+        padding: 3rem;
+      }
+      h1 { color: #007b5f; }
+      button {
+        margin-top: 1rem;
+        font-size: 1.1rem;
+        padding: 0.8rem 1.6rem;
+        border: none;
+        border-radius: 8px;
+        background: #10a37f;
+        color: #fff;
+        cursor: pointer;
+      }
+      button:hover { background: #0d8a6f; }
+      #status {
+        margin-top: 2rem;
+        font-family: monospace;
+        color: #333;
+        white-space: pre-wrap;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>🎙️ Verduurzamen Voice Assistant</h1>
+    <p>Klik op “Start” en praat — de assistent zal direct antwoorden.</p>
+    <button id="start">Start</button>
+    <div id="status"></div>
 
-  <script>
-    let ws, mediaRecorder, audioContext;
-    const indicator = document.getElementById("indicator");
+    <script type="module">
+      const statusDiv = document.getElementById("status");
+      document.getElementById("start").onclick = async () => {
+        statusDiv.innerText = "🎤 Vraag microfoon toegang...";
+        const mic = await navigator.mediaDevices.getUserMedia({ audio: true });
+        statusDiv.innerText = "✅ Microfoon actief. Verbinden met GPT...";
 
-    function setStatus(text, color="#444") {
-      indicator.textContent = text;
-      indicator.style.color = color;
-    }
-
-    document.getElementById("start").onclick = async () => {
-      setStatus("Connecting...", "#888");
-      ws = new WebSocket(`wss://${window.location.host}`);
-      ws.binaryType = "arraybuffer";
-
-      ws.onopen = () => {
-        console.log("🔗 Connected to backend");
-        setStatus("Listening...", "#007b5f");
-      };
-
-      ws.onmessage = async (event) => {
-        try {
-          const msg = JSON.parse(event.data);
-
-          // 🎧 Audio playback
-          if (msg.type === "response.audio.delta") {
-            console.log("🎧 Audio delta received:", msg.delta.length);
-            const audioBytes = Uint8Array.from(atob(msg.delta), c => c.charCodeAt(0));
-            if (!audioContext) audioContext = new AudioContext();
-            const audioBuffer = await audioContext.decodeAudioData(audioBytes.buffer);
-            const src = audioContext.createBufferSource();
-            src.buffer = audioBuffer;
-            src.connect(audioContext.destination);
-            src.start();
-          }
-
-          // 💬 Text transcript
-          if (msg.type === "response.text.delta") {
-            console.log("🤖 GPT:", msg.delta);
-          }
-
-          if (msg.type === "error") {
-            console.error("⚠️ OpenAI error:", msg.error);
-          }
-        } catch {
-          // ignore binary chunks
+        // Request ephemeral key from your backend
+        const session = await fetch("/session").then(r => r.json());
+        if (!session?.client_secret?.value) {
+          statusDiv.innerText = "❌ Fout bij sessie creatie.";
+          return;
         }
-      };
 
-      // 🎙️ Capture microphone
-      const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-      mediaRecorder = new MediaRecorder(stream, { mimeType: "audio/webm;codecs=opus" });
+        const token = session.client_secret.value;
+        const model = "gpt-4o-realtime-preview";
 
-      mediaRecorder.ondataavailable = async (e) => {
-        setStatus("Sending audio...", "#ff9500");
-        const reader = new FileReader();
-        reader.onloadend = () => {
-          const base64Audio = reader.result.split(",")[1];
+        // Setup WebRTC connection
+        const pc = new RTCPeerConnection();
+        mic.getTracks().forEach(t => pc.addTrack(t, mic));
 
-          // ✅ Tell OpenAI the audio format is webm
-          ws.send(JSON.stringify({ 
-            type: "input_audio_buffer.append", 
-            audio: base64Audio,
-            format: "webm" 
+        pc.ontrack = (ev) => {
+          const [stream] = ev.streams;
+          const audio = document.createElement("audio");
+          audio.autoplay = true;
+          audio.srcObject = stream;
+          document.body.appendChild(audio);
+          statusDiv.innerText = "🗣️ GPT luistert en spreekt terug...";
+        };
+
+        const dc = pc.createDataChannel("oai-events");
+        dc.onmessage = (e) => console.log("🛰️", e.data);
+
+        dc.onopen = () => {
+          console.log("✅ DataChannel open");
+          dc.send(JSON.stringify({
+            type: "session.update",
+            session: {
+              modalities: ["audio", "text"],
+              voice: "nova",
+              instructions:
+                "Je bent een vriendelijke Nederlandse verduurzamingsassistent. Praat natuurlijk en geef nuttige tips.",
+            },
           }));
-          ws.send(JSON.stringify({ type: "input_audio_buffer.commit" }));
-          ws.send(JSON.stringify({
+          dc.send(JSON.stringify({
             type: "response.create",
             response: {
               modalities: ["audio", "text"],
-              instructions: "Beantwoord vriendelijk in het Nederlands en zeg iets over verduurzaming."
-            }
+              instructions: "Begroet me vriendelijk alsof we net beginnen te praten.",
+            },
           }));
-          setStatus("Listening...", "#007b5f");
         };
-        reader.readAsDataURL(e.data);
+
+        const offer = await pc.createOffer();
+        await pc.setLocalDescription(offer);
+
+        const resp = await fetch(`https://api.openai.com/v1/realtime?model=${model}`, {
+          method: "POST",
+          headers: {
+            Authorization: `Bearer ${token}`,
+            "Content-Type": "application/sdp",
+            "OpenAI-Beta": "realtime=v1",
+          },
+          body: offer.sdp,
+        });
+
+        if (!resp.ok) {
+          statusDiv.innerText = "❌ Verbinding mislukt.";
+          console.error(await resp.text());
+          return;
+        }
+
+        const answer = { type: "answer", sdp: await resp.text() };
+        await pc.setRemoteDescription(answer);
+        statusDiv.innerText = "✅ Verbonden! GPT zal zo iets zeggen...";
       };
-
-      mediaRecorder.start(1500); // send every 1.5s
-    };
-
-    document.getElementById("stop").onclick = () => {
-      setStatus("Stopped", "#b33");
-      mediaRecorder?.stop();
-      ws?.close();
-    };
-  </script>
-</body>
+    </script>
+  </body>
 </html>
